# roast2d

./: .gitignore  Cargo.toml  MIT_LICENSE.txt  README.md
.github/workflows/: ci.yaml  wasm-ci.yaml
benches/: sat_collision.rs
examples/: breakout.rs  brickout.rs  demo.rs
examples/breakout/: Cargo.toml
examples/breakout/src/: main.rs
roast2d_derive/: Cargo.toml
roast2d_derive/src/: lib.rs
roast2d_ldtk/: Cargo.toml
roast2d_ldtk/src/: ldtk.rs  level.rs  lib.rs  map.rs
roast2d_physics/: Cargo.toml
roast2d_physics/src/: collision.rs  collision_map.rs  entities.rs  lib.rs  physics.rs  trace.rs
src/: animation.rs  app.rs  assets.rs  camera.rs  collision.rs  collision_map.rs  color.rs  commands.rs  engine.rs  entities.rs  entity.rs  entity_hooks.rs  errors.rs  font.rs  handle.rs  health.rs  hooks.rs  image.rs  input.rs  ldtk.rs  level.rs  lib.rs  map.rs  physics.rs  prelude.rs  render.rs  sat.rs  sorts.rs  sprite.rs  text_cache.rs  trace.rs  transform.rs  types.rs  world.rs
src/asset/: mod.rs
src/asset/io/: file.rs  mod.rs  web.rs
src/ecs/: component.rs  entity.rs  entity_ref.rs  mod.rs  resource.rs  unsafe_mut.rs  unsafe_world_ref.rs  world.rs
src/platform/: mod.rs  sdl.rs  web.rs
