[package]
authors = ["jjy"]
description = "Roast2D LDTK integration"
name = "roast2d_ldtk"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jjyr/roast2d"

[dependencies]
roast2d = { path = "..", version = "0.0" }
roast2d_physics = { path = "../roast2d_physics", version = "0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
